# airclerk

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
src/airclerk/: __init__.py  main.py
tests/: conftest.py  demo.py  main.py  test_main.py
