[project]
name = "airclerk"
version = "0.1.0"
description = "Air + Clerk for user management."
readme = "README.md"
authors = [
    { name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com" },
    { name = "Audrey Roy Greenfeld", email = "audrey@feldroy.com" },
]
requires-python = ">=3.13"
dependencies = [
    "air>=0.39.0",
]
urls.Homepage = "https://github.com/feldroy/airclerk"
urls.Issues = "https://github.com/feldroy/airclerk/issues"

[dependency-groups]
dev = [
    "ipdb",
    "pytest>=8.4.2",    
    "ruff>=0.14.3",    
    "rust-just>=1.43.0",
    "pytest-asyncio>=1.1.0", # Adds asyncio support for pytest
]


[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"


[tool.pytest_env]
# Test value for the SUPER_SECRET_KEY environment variable
# DATABASE_URL = "sqlite:///:memory:"
